# auto-soh

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gh-pages.yml  python-package.yml
asoh/: interface.py
asoh/estimators/online/: __init__.py  base.py  utils.py
asoh/models/: __init__.py  base.py  ecm.py
asoh/models/ecm/: __init__.py  advancedSOH.py  components.py  ecm.py  inputs.py  ins_outs.py  simulator.py  transient.py  utils.py
asoh/observers/: __init__.py  base.py  ukf.py
asoh/online/: __init__.py  base.py  ukf.py
dev/: environment.yml
docs/: README.md  conf.py  estimator.rst  extending.rst  index.rst  simulator.rst  system-models.rst  toolkit.rst  user-guide.rst
docs/estimators/: index.rst
docs/estimators/offline/: index.rst
docs/estimators/online/: conversions.rst  dual.rst  index.rst  joint.rst
docs/extractors/: demonstrate-ecm-extractors.ipynb  index.rst
docs/extractors/files/: hppc.h5  hppc_1rc.h5
docs/figure-pptx/: explain-filter.pptx  explain-offline.pptx
docs/source/: estimators.rst  extractors.rst  interface.rst  models.rst  modules.rst  offline.rst  online.rst  simulator.rst
docs/source/cell-models/: ecm.rst  thevenin.rst
docs/tutorials/: defining-complex-soc-dependence.ipynb  ecm-to-online-estimation.ipynb  index.rst
moirae/: __init__.py  interface.py  simulator.py  version.py
moirae/estimators/: __init__.py
moirae/estimators/offline/: __init__.py  base.py  loss.py  objectives.py  scipy.py
moirae/estimators/online/: __init__.py  distributions.py  dual.py  joint.py  utils.py
moirae/estimators/utils/: model.py
moirae/extractor/: ecm.py
moirae/extractors/: base.py  ecm.py
moirae/extractors/ecm/: __init__.py  capacity.py  ocv.py  rc_components.py  series_resistance.py  (+1 more)
moirae/interface/: __init__.py  hdf5.py
moirae/models/: __init__.py  base.py  utils.py
notebooks/: demonstrate-ukf.ipynb  demonstrate_dual_ukf.ipynb  demonstrate_ecm.ipynb  demonstrate_ignorance.ipynb  demonstrate_joint_ukf.ipynb  demonstrate_model_bases.ipynb  demonstrate_ukf.ipynb  demonstrate_workflow.ipynb  gen_test.ipynb  interface-with-battery-toolkit.ipynb  investigate_dual.ipynb  state-estimation-for-camp-cell.ipynb
notebooks/data/: batch_B10A_cell_3.h5
performance-tests/: README.md  datasets.yml  run-performance-test.py  visualize-performance-data.ipynb
performance-tests/datasets/: camp.h5
tests/: LFP_single_RPT.h5  conftest.py  test_interface.py  test_simulator.py  test_version.py
tests/estimators/: test_cell_model_interface.py  test_cell_model_wrapper.py  test_interface.py
tests/extractors/: test_ecm_maxcap.py  test_ecm_ocv.py  test_ecm_r0.py  test_ecm_rc.py  test_utils.py
tests/internal/: general.ipynb
tests/models/: test_base.py  test_components.py  test_doc.py  test_ecm.py  test_thevenin.py  test_utils.py
tests/observers/: test_ukf.py
tests/online/: test_ukf.py
(+138 files in other folders)
