[project]
name = "auto-soh"
version = "0.0.1"
description = "Algorithms for automatic assessment of advanced state of health for batteries"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["batteries", "science", "data science"]
authors = [
    {name = "Logan Ward", email = "lward@anl.gov"},
    {name = "Victor Venturi", email = "vventuri@anl.gov"},
    {name = "Noah Paulson", email = "lward@anl.gov"},
]
dependencies = [
    "battery-data-toolkit",
    "pydantic",
    "numpy"
]

[tool.setuptools.packages.find]
include = ["asoh*"]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov"
]

[project.urls]
repository = "https://github.com/rovi-org/auto-soh"
