[project]
name = "moirae"
version = "0.0.1"
description = "Algorithms for automatic assessment of advanced state of health for batteries"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["batteries", "science", "data science"]
authors = [
    {name = "Logan Ward", email = "lward@anl.gov"},
    {name = "Victor Venturi", email = "vventuri@anl.gov"},
    {name = "Noah Paulson", email = "lward@anl.gov"},
]
dependencies = [
    "battery-data-toolkit",
    "pydantic",
    "numpy",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ["moirae*"]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-skip-slow"
]
docs = [
    'sphinx',
    'pydata-sphinx-theme',
    'sphinx-pydantic',
    'autodoc-pydantic'
]
thevenin = [
    'thevenin@git+https://github.com/ROVI-org/thevenin.git'
]

[project.urls]
repository = "https://github.com/rovi-org/auto-soh"
