[project]
name = "moirae"
dynamic = ["version"]
description = "Algorithms for automatic assessment of advanced state of health for batteries"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["batteries", "science", "data science"]
authors = [
    {name = "Logan Ward", email = "lward@anl.gov"},
    {name = "Victor Venturi", email = "vventuri@anl.gov"},
    {name = "Noah Paulson", email = "npaulson@anl.gov"},
]
dependencies = [
    "battery-data-toolkit",
    "pydantic",
    "numpy",
    "scipy",
    "scikit-learn",
    "flatten-dict",
    "tqdm"
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["moirae*"]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-skip-slow"
]
docs = [
    'sphinx',
    'pydata-sphinx-theme',
    'sphinx-pydantic',
    'autodoc-pydantic',
    'nbsphinx'
]
thevenin = [
    'thevenin@git+https://github.com/NREL/thevenin'
]

[project.urls]
repository = "https://github.com/rovi-org/auto-soh"

[tool.setuptools_scm]
